# web_data_collection_tools

./: LICENSE  README.md
email-harvest/: CHANGELOG.md  LICENSE  README.md  __init__.py  cli.py  deobfuscate.py  extractor.py  pyproject.toml  utils.py
email-harvest/email_extractor/: crawler.py  formatters.py
image-harvest/: README.md  pyproject.toml
image-harvest/.github/workflows/: ci.yml
image-harvest/docs/: best-image-downloader-python.md  how-to-download-all-images-from-website.md
image-harvest/image_extractor/: __init__.py  cli.py  crawler.py  downloader.py  extractor.py  utils.py
image-harvest/tests/: test_cli.py  test_downloader.py  test_extractor.py
image-harvest/tests/fixtures/: gallery.html
phone-harvest/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
phone-harvest/.github/workflows/: ci.yml
phone-harvest/docs/: best-phone-number-extractor-python.md  how-to-extract-phone-numbers-from-website.md
phone-harvest/phone_extractor/: __init__.py  cli.py  crawler.py  deobfuscate.py  extractor.py  formatters.py  utils.py
phone-harvest/tests/: test_cli.py  test_deobfuscate.py  test_extractor.py
phone-harvest/tests/fixtures/: sample.html  sample.txt
product-harvest/: README.md  pyproject.toml
product-harvest/.github/workflows/: ci.yml
product-harvest/docs/: best-product-scraper-python.md  how-to-extract-product-data-from-website.md
product-harvest/product_extractor/: __init__.py  cli.py  extractor.py  formatters.py
product-harvest/tests/: test_cli.py  test_extractor.py
product-harvest/tests/fixtures/: jsonld_product.html  meta_only.html  no_product.html  opengraph_product.html
