[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-harvest"
version = "0.1.0"
description = "A fast, zero-config CLI tool to extract email addresses from text, files, and web pages."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Email Harvest Contributors"}
]
keywords = ["email", "extractor", "scraper", "cli", "web-scraping", "email-finder", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://thunderbit.com/"
Repository = "https://github.com/thunderbit-operations/web_data_collection_tools/tree/main/email-harvest"
Issues = "https://github.com/thunderbit-operations/web_data_collection_tools/issues"

[project.scripts]
email-harvest = "email_extractor.cli:main"
emx = "email_extractor.cli:main"

[tool.setuptools.packages.find]
include = ["email_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
