[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-harvest"
version = "0.1.0"
description = "A fast CLI tool to extract, validate, and identify phone numbers from text, files, and web pages."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Phone Harvest Contributors"}
]
keywords = ["phone", "extractor", "scraper", "cli", "phone-number", "validation", "e164", "libphonenumber"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: Telephony",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://thunderbit.com/"
Repository = "https://github.com/thunderbit-operations/web_data_collection_tools/tree/main/phone-harvest"
Issues = "https://github.com/thunderbit-operations/web_data_collection_tools/issues"

[project.scripts]
phone-harvest = "phone_extractor.cli:main"
phonex = "phone_extractor.cli:main"

[tool.setuptools.packages.find]
include = ["phone_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
