[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-harvest"
version = "0.1.0"
description = "Extract structured product data from any web page using Schema.org JSON-LD — no AI required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Product Harvest Contributors"}
]
keywords = ["product", "scraper", "schema.org", "json-ld", "ecommerce", "price", "structured-data", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://thunderbit.com/"
Repository = "https://github.com/thunderbit/product-harvest"
Issues = "https://github.com/thunderbit/product-harvest/issues"

[project.scripts]
product-harvest = "product_extractor.cli:main"
productx = "product_extractor.cli:main"

[tool.setuptools.packages.find]
include = ["product_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
